--- a/todo
+++ b/todo
@@ -1,13 +1,8 @@
 ##
 For app node
-  Install Nginx
-  Install libs ()
-  Install Ruby over Rbenv
-  Create directories
+  Install libs
   Generate configs
 For db node
-  Install Postgresql from repo
-  Install Postgresql contrib
   Replication
 For staff
   Redis
@@ -17,3 +12,6 @@ For hostmachine
   Install and setup haproxy
   Install openvz
   Tasks - create container, add dns name, add to haproxy, del from haproxy
+
+Tests
+Notify 
